# fast_api_dependency_project

./: .env  pyproject.toml
src/fast_api_dependecy_injection/: app.py  containers.py  dependencies.py  settings.py
src/fast_api_dependecy_injection/clients/: db_client.py  gitlab_client.py  jira_client.py  slurm_client.py
src/fast_api_dependecy_injection/factories/: handler_factory.py
src/fast_api_dependecy_injection/handlers/: __init__.py  handler.py
src/fast_api_dependecy_injection/handlers/encoder_bisector/: encoder_bisector_handler.py
src/fast_api_dependecy_injection/handlers/handler_one/: handler_one.py
src/fast_api_dependecy_injection/routers/: __init__.py  default_route.py  encoder_upgrader_router.py  generate_router.py  handler_one.py
src/fast_api_dependecy_injection/schemas/: encoder_bisector.py  handler_one.py
src/fast_api_dependency_injection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
