# pyproject.toml

[project]
name = "fast_api_dependency_injection"
version = "0.1.0"
description = "A minimal example project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }

# Optional dependencies can be included under dependencies or optional-dependencies
dependencies = [
    "requests >= 2.0",
    "dependency_injector",
    "pydantic-settings",
    "jira",
    "fastapi[standard]"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
